Entrega da parte do html do projeto

--- a/Contacts.html
+++ b/Contacts.html
@@ -25,7 +25,7 @@
 
             <div class="content">
                 <h3>Contatos</h3>
-                <h4>Telefone: (81) 99999-8888</h4> <h4>Whatsapp: (81) 98888-9999</h4>
+                <h4>Telefone: (81) 99999-8888</h4> <h4>Whatsapp: (81) 98888-9999</h4> <h4>cac@clinicagv.com.br</h4>
 
                 <h3>Nos envie um email:</h3>
                 <form action="Contacts.html">
@@ -43,7 +43,14 @@
             </div>
 
             <div class="footer">
-                
+                <h2>Nossa Clinica</h2>
+                Quando você visitar a Nossa Clínica,<br> espere por receber cuidados especiais,<br> encontrar Médicos especialistas e capacitados,<br> pessoal clínico atencioso, prontos para lhe oferecer <br> uma experiência de saúde diferenciada excepcional!
+                <ul>
+                    <li><a href="Index.html">Página inicial</a></li>
+                    <li><a href="WorkTime.html">Horarios de atendimento</a></li>
+                    <li><a href="AboutUs.html">Sobre</a></li>  
+                    <li><a href="Contacts.html">Fale conosco</a></li>
+                </ul>
             </div>
         </div>
     </div>
