--- a/WorkTime.html
+++ b/WorkTime.html
@@ -24,11 +24,52 @@
             </div>
 
             <div class="content">
-                <p>Horario de atendimento da clinica</p>
+                <p>Horario de atendimento de nossos serviços:</p>
+
+                <table border="1">
+                    <tr>
+                        <th>Serviços</th>
+                        <th>Segunda a Sexta</th>
+                        <th>Sabádos</th>
+                        <th>Feriados</th>
+                    </tr>
+                    <tr align="Center">
+                        <td>Clinica Geral</td>
+                        <td>08h - 19h</td>
+                        <td>08h - 14h</td>
+                        <td>08h - 14h</td>
+                    </tr>
+                    <tr align="Center">
+                        <td>Psicologia</td>
+                        <td>08h - 19h</td>
+                        <td>08h - 14h</td>
+                        <td>08h - 14h</td>
+                    </tr>
+                    <tr align="Center">
+                        <td>Pediatria</td>
+                        <td>08h - 19h</td>
+                        <td>08h - 18h</td>
+                        <td>-</td>
+                    </tr>
+                    <tr align="Center">
+                        <td>Oftalmologia</td>
+                        <td>08h - 19h</td>
+                        <td>08h - 18h</td>
+                        <td>-</td>
+                    </tr>
+
+                </table>
             </div>
 
             <div class="footer">
-                test1
+                <h2>Nossa Clinica</h2>
+                Quando você visitar a Nossa Clínica,<br> espere por receber cuidados especiais,<br> encontrar Médicos especialistas e capacitados,<br> pessoal clínico atencioso, prontos para lhe oferecer <br> uma experiência de saúde diferenciada excepcional!
+                <ul>
+                    <li><a href="Index.html">Página inicial</a></li>
+                    <li><a href="WorkTime.html">Horarios de atendimento</a></li>
+                    <li><a href="AboutUs.html">Sobre</a></li>  
+                    <li><a href="Contacts.html">Fale conosco</a></li>
+                </ul>
             </div>
         </div>
     </div>
